--- a/style.css
+++ b/style.css
@@ -1,80 +1,83 @@
-body {
-    width:100%;
-    height:100%;
-    position:fixed;
-}
-h4 {
-    color:#766D7A;
-    text-align:center;
-}
-img{
-    text-align:center;
-}
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-#money {
-    font-size:30px;
-    font:monospace;
-    color:lightgreen;
-}
-button {
-    background-color:teal;
-}
-.text {
-    font-family:'Courier New', monospace;
-}
-#hud-main-button {
-    position:fixed;
-    width:25%;
-    padding-top:25%;
-    left:37.5%;
-    top:25%;
-}
-#main-button {
+
+.hud-left {
     position:absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    border-radius:60%;
-    box-shadow: 0 9px #999;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-evenly;
+    height:100%;
+    width:33%;
+    border-right:5px solid black;
+    align-items:center;
 }
 
-#main-button:active
-{
-    transform:translateY(4px);
-    box-shadow: 0 5px #666;
+.menu {
+    position:relative;
+    border:5px solid black;
+    display:flex;
+    height:7%;
+    justify-content:space-evenly;
+    align-items:center;
 }
-button:hover {
-    cursor:pointer;
+.menuButton {
+    height:100%;
+    width:33%;
+    display:relative;
+    background-color:white;
+    border:2px solid black;
 }
-.hud-top {
-    height:10%;
-    width:100%;
-    top:5%;
-    position:fixed;
-    
+
+.shop-top {
+    height:7%;
+    position:relative;
+    text-align:center;
+    background-color:#7086ab;
+    border:5px solid black;
 }
+.shop-top p{
+    line-height:100%;
+}
+
 .shop {
     position:relative;
-    top:20%;
-    height:63%;
-    width:30%;
-    left:10px;
-    border: 4px solid rgb(0, 153, 122);
     background-color:rgb(0,0,0,0.2);
-    overflow:auto;
+    border:5px solid black;
+    overflow-y:auto;
+}
+.hud-right {
+    position:absolute;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-evenly;
+    height:100%;
+    width:33%;
+    border-left:5px solid black;
+    align-items:center;
+    left:67%;
+    overflow-y: auto;
+}
+.socials {
+    display:flex;
+    justify-content:space-evenly;
+    height:7%;
+    border:5px solid black;
+}
+.socials button {
+    width:24.75%;
+    height:100%;
+    border:2px solid black;
+}
+.upgrades-top {
+    height:7%;
+    position:relative;
+    text-align:center;
+    background-color:#7086ab;
+    border:5px solid black;
 }
 .upgrades {
-    position:fixed;
-    top:20%;
-    height:70%;
-    width:30%;
-    right:10px;
+    position:relative;
+    background-color:white;
+    border:5px solid black;
+    overflow-y:auto;
     background-color:rgb(0,0,0,0.2);
 }
 #multiplier {
@@ -87,25 +90,17 @@ button:hover {
     font:monospace;
     color:brown;
 }
-.hud-bottom-footer {
+.footer {
     position:fixed;
-    bottom:2%;
+    bottom:0px;
 }
-.shop .button {
-    width:auto;
-    font-size:30;
+.shop button {
+    background-color:teal;
 }
 .shop p {
     font-size:30;
 }
-.shop-top {
-    left:10px;
-    height:7%;
-    width:30%;
-    position:fixed;
-    text-align:center;
-    top:20%;
-}
+
 .item {
     position:relative;
     justify-content:center;
@@ -116,8 +111,111 @@ button:hover {
     border-left:8px solid rgb(0, 179, 179);
     border-bottom:2px solid rgb(0, 128, 128);
 }
+.hud-center {
+    top:0px;
+    position:absolute;
+    width:34%;
+    left:33%;
+    background-color:white;
+    height:100%;
+}
+.hud-top {
+    height:20%;
+    width:100%;
+    top:5%;
+    position:absolute;
+    text-align:center;
+    background-color:rgb(0,0,0,0.2);
+}
+h4 {
+    color:#766D7A;
+    text-align:center;
+}
+img{
+    text-align:center;
+}
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+#money {
+    font-size:30px;
+    font:monospace;
+    color:lightgreen;
+}
+
+.text {
+    font-family:'Courier New', monospace;
+}
+#hud-main-button {
+    position:absolute;
+    width:90%;
+    padding-top:90%;
+    left:5%;
+    top:30%;
+}
+#main-button {
+    position:absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius:60%;
+    box-shadow: 0 9px #999;
+    background-color:teal;
+}
+
+#main-button:active
+{
+    transform:translateY(4px);
+    box-shadow: 0 5px #666;
+}
+button:hover {
+    cursor:pointer;
+}
+
+
+
+
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 150%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent black transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
 .hud-tooltips {
-    position:fixed;
+    position:absolute;
     width:25%;
     height:6.3%;
     display:none;
@@ -132,7 +230,7 @@ button:hover {
 }
 #hud-tooltip {
     position:inline-block;
-    height:100%;
+    height:auto;
     background-color:#006D5B;
     border:solid 5px black;
     padding:4px 4px 4px;
@@ -149,3 +247,33 @@ button:hover {
     border-left:8px solid rgb(118, 193, 32);
     border-bottom:2px solid rgb(183, 113, 8);
 }
+
+
+.click-score {
+    position: absolute;
+    display: none;
+    pointer-events: none;
+    background: #333;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-align: center;
+    animation: fade 3s;
+    transition: 0.5 ease;
+}
+@keyframes fade {
+    from { opacity: 1; }
+    to { opacity: 0; }
+}
+.main {
+    width:auto;
+    height:auto;
+    left:40px;
+    right:40px;
+    top:60px;
+    bottom:60px;
+    background-color:#908275;
+    position:absolute;
+    border:5px solid black;
+}
+
