--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
     border:2px solid black;
 }
 #discord {
-    background-image:/images/discord-icon.png/;
+    background-image:images/discord-icon.png;
 }
 .upgrades-top {
     height:7%;
