--- a/asset/style.css
+++ b/asset/style.css
@@ -13,6 +13,7 @@
 .menu {
     position:relative;
     border:5px solid black;
+    background-color:black;
     display:flex;
     height:7%;
     justify-content:space-evenly;
@@ -61,10 +62,10 @@
     height:7%;
     border:5px solid black;
 }
-.socials button {
+.socials a {
     width:24.75%;
     height:100%;
-    border:2px solid black;
+    border:2px solid white;
 }
 #discord {
     background-image: url(./images/discord-icon.png);
