--- a/asset/style.css
+++ b/asset/style.css
@@ -64,7 +64,7 @@
 .socials a {
     height:100%;
     width:24.75%;
-    border:2px solid white;
+    border:2px solid black;
     background-repeat:no-repeat;
     background-position:center;
     background-size:contain;
